refactor: ids token validation as extension